fix LowRankMatrix, improve plots, update deps

--- a/Project.toml
+++ b/Project.toml
@@ -20,10 +20,11 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 UnPack = "3a884ed6-31ef-47d7-9d2a-63182c4928ed"
 
 [compat]
-ArnoldiMethod = "0.4.0"
-BlockDiagonals = "0.2.0"
-Reexport = "1.2.2"
-Roots = "2.2.10"
-SparseArrays = "1.11.0"
-Test = "1.11.0"
-UnPack = "1.0.2"
+ArnoldiMethod = "0.4"
+BlockDiagonals = "0.2"
+FermionicHilbertSpaces = "0.8"
+Reexport = "1"
+Roots = "2"
+SparseArrays = "1"
+Test = "1"
+UnPack = "1"
